# claude-code-hooks-diary

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.en.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: hooks.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: community-posts.md
docs/02-design/features/: working-diary-v2-phase-a.design.md
docs/03-analysis/: project-review.analysis.md  working-diary-v2-phase-a.analysis.md
docs/04-report/: working-diary-v2-phase-a.report.md
docs/plans/: phase-a-personal-tool.md  phase-b-open-source.md  phase-c-team-tool.md  phase-d-distribution.md
src/claude_diary/: __init__.py  __main__.py  cli.py  config.py  core.py  dashboard.py  formatter.py  hook.py  i18n.py  indexer.py  log.py  team.py  types.py  writer.py
src/claude_diary/cli/: __init__.py  config.py  maintenance.py  search.py  setup.py  stats.py  team.py  write.py
src/claude_diary/exporters/: base.py  discord.py  github.py  loader.py  notion.py  (+2 more)
tests/: test_audit.py  test_categorizer.py  test_cli.py  test_config.py  test_core.py  test_dashboard.py  test_exporters.py  test_formatter.py  test_git_info.py  test_hook.py  test_i18n.py  test_indexer.py  test_parser.py  test_secret_scanner.py  test_stats.py  test_team.py  test_team_security.py  test_write.py  test_writer.py
working-diary-system/: DEPRECATED.md  README.md  example-settings.json  install.sh
working-diary-system/hooks/: weekly-summary.py  working-diary.py
(+7 files in other folders)
